--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -902,7 +902,17 @@ h4 {
 .often-questions .accordion-heading span {
   border-bottom: 2px dotted #333;
 }
+.often-questions p.active-style span {
+  border: 0;
+  color: #e950d7;
+  font-weight: 900;
+  text-decoration: none;
+}
+.often-questions .accordion-heading.active + .accordion-block {
+  display: block;
+}
 .often-questions .accordion-block {
+  display: none;
   margin-top: 1rem;
   background-color: #f7e7e6;
   padding: 3rem 4rem;
